fix footer layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -123,11 +123,11 @@ p {
   max-width: 150px;
 }
 
-nav>ul>li {
+nav > ul > li {
   list-style-type: none;
 }
 
-nav>ul>li>a {
+nav > ul > li > a {
   display: inline-block;
   padding: 8px 16px;
   margin-top: 8px;
@@ -137,7 +137,7 @@ nav>ul>li>a {
   color: #3d4d4a;
 }
 
-nav>ul>li>a:hover {
+nav > ul > li > a:hover {
   transition: 0.3s;
   background: #336699;
 }
@@ -148,17 +148,17 @@ nav>ul>li>a:hover {
   justify-content: space-between;
 }
 
-.navtoggle ul>li:last-child {
+.navtoggle ul > li:last-child {
   position: absolute;
   top: 0;
   right: 0;
 }
 
-.navtoggle ul>li:not(:last-child) {
+.navtoggle ul > li:not(:last-child) {
   display: none;
 }
 
-.navtoggle.responsive ul>li {
+.navtoggle.responsive ul > li {
   display: block;
 }
 
@@ -188,8 +188,11 @@ main {
   padding-top: 56px;
 }
 
+footer {
+  clear: both;
+}
 @media only screen and (min-width: 641px) {
-  .navtoggle ul>li:not(:last-child) {
+  .navtoggle ul > li:not(:last-child) {
     display: inline-block;
   }
 
@@ -238,14 +241,14 @@ main {
     margin-top: 0;
   }
 
-  nav>ul>li {
+  nav > ul > li {
     display: inline-block;
     list-style-type: none;
     padding: 0;
     margin: 0;
   }
 
-  nav>ul {
+  nav > ul {
     list-style-type: none;
     padding: 0;
     margin: 1em 0;
@@ -284,7 +287,7 @@ main {
 }
 
 @media only screen and (mid-width: 1024px) {
-  }
+}
 
 .container {
   max-width: 1200px;
@@ -292,7 +295,8 @@ main {
   margin-right: auto;
 }
 
-@media only screen and (min-width: 1920px) {}
+@media only screen and (min-width: 1920px) {
+}
 
 #about-page h3 {
   margin-top: 0;
